[cd] remove default envs from docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: messaging-sms
+    container_name: messaging-telegram
     ports:
       - "3000:3000"
     environment:
       BROKER_URL: redis://redis:6379/0
-      SEND_QUEUE: messages:send:sms
-      RECEIVE_QUEUE: messages:received
-      GATEWAY_URL: https://sms.capcom.me/api/3rdparty/v1/
-      WEBHOOK_PORT: 3000
+      TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
     depends_on:
       redis:
         condition: service_healthy
